# Plataforma-CAM-CAD-Data-Frontier

./: .dockerignore  .env  .env.example  AI_INSTRUCTIONS.md  CMakeLists.txt  Dockerfile  README.md  docker-compose.yml  modelo_teste_ocaf.step  modelo_teste_ocaf.stl  modelo_teste_ocaf.xml.xbf  nginx.conf  package.json  pagina do editor.txt  pagina inicial - clara.txt  pagina inicial - escura.txt  requirements.txt
.agent/rules/: rule.md
Cad-Teste-02/: check-env.cjs  index.html  package-lock.json  package.json  roadmap_123d.md  vite.config.ts
Cad-Teste-02/src/: edge-selector.ts  history.ts  main.ts  param-editor.ts  scene-tree.ts  sketch-canvas.ts  snap.ts  store.ts  styles.css  workplane.ts
Cad-Teste-02/src-tauri/: .tauriignore  Cargo.toml  build.rs  build_error.txt  tauri.conf.json
Cad-Teste-02/src-tauri/.cargo/: config.toml
Cad-Teste-02/src-tauri/src/: graph.rs  lib.rs  main.rs
docs/: README.md
fabscript/: .clinerules  README.md  index.html  package-lock.json  package.json  vite.config.ts
fabscript/public/: occt-worker.js
fabscript/src/: App.tsx  index.css  main.tsx
fabscript/src/components/: CodeEditor.tsx  MachineContextPanel.tsx  Viewer3D.tsx
fabscript/src/engine/: cam.ts  compiler.ts  gcode.ts  geometry.ts  occt-bridge.ts
fabscript/src/engine/api/: Operation.ts  Path2D.ts  Stock.ts  Tool.ts
fabscript/src/engine/workers/: cam.worker.ts
fabscript/src/pages/: EditorPage.tsx  LandingPage.tsx
fabscript/src/types/: js-clipper.d.ts  opencascade.d.ts
src/App/ai_engine/datasets/: README.md
src/App/ai_engine/pdf_parser/: README.md
src/App/ai_engine/rag_context/: build123d_rules.txt
src/App/ai_engine/vlm_model/: README.md  llm_generator.py
src/App/kernel/: CMakeLists.txt  README.md
src/App/kernel/include/: OCAFDocumentManager.h  OCCTKernel.h
src/App/kernel/src/: OCAFDocumentManager.cpp  OCCTKernel.cpp
src/App/kernel/tests/: test_kernel.cpp
src/App/modeling/: README.md  parametric_generator.py
src/App/server/: README.md  main.py  requirements.txt
src/Gui/blockly_editor/: custom_blocks.js  index.html  main.js  transpiler.js
src/Gui/blockly_editor/custom_blocks/: README.md
src/Gui/blockly_editor/transpiler/: README.md
src/Gui/ui_components/: README.md
src/Gui/viewer_3d/webgl_canvas/: README.md
src/shared/: README.md
tests/app_tests/: README.md
tests/gui_tests/: README.md
