[package]
name = "cad-teste-02"
version = "0.1.0"
description = "CAD MVP — OpenCASCADE + Tauri v2"
authors = ["you"]
edition = "2021"

[lib]
name = "cad_teste_02_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

# ─── Build dependencies ────────────────────────────────────────────────────────
[build-dependencies]
tauri-build = { version = "2", features = [] }
cc          = "1"   # compila os .cpp do OCCT sem bindgen

# ─── Runtime dependencies ──────────────────────────────────────────────────────
[dependencies]
tauri               = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde               = { version = "1", features = ["derive"] }
serde_json          = "1"
petgraph            = { version = "0.6", features = ["serde-1"] }
